<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:id="@+id/linearLayout1">
    <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/title1" android:layout_gravity="center"></TextView>
    <TextView android:text="@string/numPoints" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="match_parent" android:id="@+id/editText1" android:layout_height="wrap_content" android:inputType="number">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:text="@string/numClusters" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="match_parent" android:id="@+id/editText2" android:layout_height="wrap_content" android:inputType="number"></EditText>
    <TextView android:text="@string/numDimensions" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="match_parent" android:id="@+id/editText3" android:layout_height="wrap_content" android:inputType="number"></EditText>
    <TextView android:text="@string/seed" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="match_parent" android:id="@+id/editText4" android:layout_height="wrap_content" android:inputType="number"></EditText>
    <Button android:layout_width="wrap_content" android:text="Continue" android:layout_height="wrap_content" android:layout_gravity="right" android:id="@+id/button1"></Button>

</LinearLayout>